kubernetes/apps/homer/app/development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homer
        rpi5.cluster.policy/egress-kubeapi: "true"
        rpi5.cluster.policy/egress-namespace: "true"
        rpi5.cluster.policy/egress-world: "true"
        rpi5.cluster.policy/ingress-namespace: "true"
        rpi5.cluster.policy/ingress-nginx: "true"
        rpi5.cluster.policy/ingress-nodes: "true"
        rpi5.cluster.policy/ingress-world: "true"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: homer
          image: b4bz/homer:v24.05.1
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - protocol: TCP
              containerPort: 8088
              name: http
          volumeMounts:
            - name: assets
              mountPath: /www/assets
      volumes:
        - name: assets
          hostPath:
            path: /mnt/nfs/AppData/homer/www/assets
            type: Directory
